--- a/Collaborator.ipynb
+++ b/Collaborator.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hello there! We heard you're planning a HackWeek!\n",
+    "Collaboratr is a tool that will help connect hackers with knowledge with people who want to learn from them. To use this tool, simply follow the steps contained in this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +21,7 @@
        "<module 'collaboratr' from 'collaboratr.pyc'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,21 +44,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "BREAKOUT_REQ_RATIO = 2\n",
-    "BREAKOUT_REQ_FRACTION = 0.2\n",
-    "G = nx.DiGraph()"
+    "# Step 1 Create a Google Form with the following four questions:\n",
+    "    1. What is your name? [text entry]\n",
+    "    2. What is your email? [text entry]\n",
+    "    3. What can you help others with? [checkboxes with possible topics]\n",
+    "    4. What do you want to collaborate on or learn about? [same topic checkboxes]\n",
+    "    \n",
+    "After receiving the responses from your attendees, load up the CSV of responses from the google form by running the cell below (you'll have to change the path to your own CSV)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -69,12 +77,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decision Tree"
+    "# Step 2: Determine your desired breakout threshold\n",
+    "Breakout sessions are a great way to help your attendees learn about topics that many are interested in, particularly those topics where the number of learners is much larger than the number of potential teachers. The following parameters govern the establishment of breakout sessions:\n",
+    "\n",
+    "* `BREAKOUT_REQ_RATIO` sets a minimum ratio of learners to teachers for a breakout to be established. If this is $\\leq 1$, you may prefer to have individual discussions in lieu of a breakout.\n",
+    "* `BREAKOUT_REQ_FRACTION` will establish a breakout session for any topic where the fraction of people expressing desire to learn a topic is greater than this fraction of total attendees (survey respondents). If a large fraction of your hackers want to learn about a topic, a breakout may be more efficient than individual discussions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "BREAKOUT_REQ_RATIO = 2\n",
+    "BREAKOUT_REQ_FRACTION = 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 3: Determine breakout topics\n",
+    "The following cell will compute the necessary breakout topics based on the parameters specified above. We determine these before assigning individual topic pairings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -94,29 +126,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "looks like youll be having breakouts in \n",
-      "GAIA DRI\n",
-      "packaging (Python)\n",
-      "gaussian processes\n",
-      "autodiff\n"
+      "It looks like you'll be having breakouts in:\n",
+      "1. GAIA DRI\n",
+      "2. packaging (Python)\n",
+      "3. gaussian processes\n",
+      "4. autodiff\n"
      ]
     }
    ],
    "source": [
-    "print 'looks like youll be having breakouts in '\n",
-    "for b in breakouts: print b"
+    "print 'It looks like you\\'ll be having breakouts in:'\n",
+    "for i,b in enumerate(breakouts): print str(i+1)+'.',b"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Draw Overall Hack Graph"
+    "# Step 4: Compute the Overall Graph of Topic Pairings\n",
+    "These cells will produce an overall social graph of your hackathon, with arrows pointing from a learner to a recommended teacher to consult on a topic."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "G = nx.DiGraph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +236,7 @@
        "'Resources/0.svg'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,12 +249,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Draw Individually Customized Graphs"
+    "# Step 5: Draw Individually Customized Graphs\n",
+    "These cells will produce sub-graphs for each learner, so that each attendee can easily determine who they should consult during the hack week."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -233,12 +278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#needed to create webpage below\n",
     "obj = {}\n",
     "obj['index'] = index\n",
     "obj['participants'] = [p.split(' ')[0] for p in participants]"
@@ -248,12 +294,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Web Page"
+    "# Step 6: Creating a HackWeek Reference Web Page\n",
+    "The following cells will create a webpage with both the overall and individual social graphs. If you host the html file on your webpage, attendees will be able to click on their name and find their customized learning graph."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -278,12 +325,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Breakout Visualizations"
+    "# Step 7: Create a Breakouts Web Page\n",
+    "This separate webpage will allow teachers and learners to collaboratively arrange breakout sessions during the hack week."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -304,6 +352,22 @@
     "with open('breakouts.html', 'w') as file:\n",
     "    file.write(TEMPLATE2.render(objs=objs))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 8: Enjoy streamlined learning at your hack week!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
